fix: Z-index safari

--- a/apps/fm-social-media/src/app/app.component.scss
+++ b/apps/fm-social-media/src/app/app.component.scss
@@ -11,7 +11,7 @@
         height: 14.688rem;
         width: 100%;
         background-color: #F7F9FF;
-        z-index: 1;
+        z-index: -1;
         border-radius: 0px 0px 20px 20px;
     }
     & > * {
@@ -34,6 +34,6 @@
         height: 14.688rem;
         width: 100%;
         background-color: #20222F;
-        z-index: 1;
+        z-index: -1;
     }
 }
