--- a/apps/fm-social-media/src/assets/styles/_variables.scss
+++ b/apps/fm-social-media/src/assets/styles/_variables.scss
@@ -4,6 +4,8 @@
     --color-secondary: #63687D;
     --bg-light-color-main: #fff;
     --bg-light-color-secondary: #F7F9FF;
+    --bg-light-color-border: #848BAB;
     --bg-dark-color-main: #20222F;
     --bg-dark-color-secondary: #1D1F29;
+    --bg-dark-color-border: #333A55;
 }
